# CICCADA

./: .gitignore  .pre-commit-config.yaml  README.md  clear_sky_day.ipynb  pyproject.toml  requirements.txt  sites.parquet  uv  visualisation.py
.github/workflows/: cicd.yml
BOM_NCI/: Get_ALL_postcodes_ABS.ipynb  Get_ALL_postcodes_GNAF.ipynb  describe_bom_data.ipynb  get_postcode_SA.ipynb  pre_process.ipynb  process_SA.ipynb  process_bom.ipynb  rclone.ipynb
DataEDP/: UniqueCids.csv  UniqueCids500.csv  details_c_id.csv  details_site_id.csv  edp_sites_metadata_sa_postcode.csv  edp_sites_metadata_sa_postcode_5011.csv  ghi_sample_1.csv  ghi_sample_12.csv  ghi_sample_13.csv  ghi_sample_2.csv  ghi_sample_3.csv  ghi_sample_4.csv  ghi_sample_5.csv  ghi_sample_7.csv  ghi_sample_999.csv  sl_023034_2023_10.txt
DataEDP/sl_backup/: ghi_sample_1_ours_removed_for_now.csv
Data_query/: data_quer_trino.ipynb  data_query.ipynb  duckdb_config.py  spark_config.py  trino_config.py
SolA2024/: Pre_Analysis.ipynb
SolA2024_Analysis/: Anti-islanding.ipynb  DNSP_OEMs.ipynb  Flex_export_sites.ipynb  GHI_analysis.ipynb  OEM_installDate_confrate.ipynb  PQRMs.ipynb  README.md  Self-Cons-impact.ipynb  V-Var-Conf-impact.ipynb  Volt-Var-Trino.ipynb  Volt-Var.ipynb  Volt-Watt-Trino.ipynb  Volt-Watt-ghi.ipynb  Volt-Watt.ipynb  curtailment_voltvar.ipynb  curtailment_voltwattghi.ipynb  ghi_pv_estimator.ipynb  site_station_mapping.parquet  state_voltage.ipynb  station_temp_2024.parquet  sustained_operation.ipynb  sustained_operation_3w.ipynb
SolA2024_Analysis/ghi_pv_estimator_general/: Write_All_uncartailedPV.ipynb  split_days.ipynb  (+9 more)
darth/: config.json  darth_functions.py  test.ipynb
katana_template/: array_job.sh  corresponding_data_file_list.txt  simple_qsub.sh
scripts/: 5007_detect_clearsky_results.csv  5007_detect_clearsky_results_old.csv  plot_ghi_test_data.py  prepare_ghi_test_data.py  run_detect_clearsky_days_on_5007.py
src/: Changes.docx  train11_predict_last_month.ipynb
tests/: EDP_12Nov2022.ipynb  EDP_process.ipynb  EDP_solar.ipynb  EDP_solar_tripislanding.ipynb  EDP_voltvar.ipynb  EDP_voltwatt.ipynb  clear_sky_day_analysis.ipynb  epd_process_funcs.py  test_clear_sky_days.py
(+98 files in other folders)
